Implement registration form validation and styling: add real-time validation for user inputs, enhance error handling, and include CSS for improved UI feedback.